nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-np
  namespace: redis
spec:
  type: NodePort
  ports:
  - name: redis-port
    nodePort: 31443
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: redis-enterprise
    redis.io/cluster: redis-enterprise
    redis.io/role: node
    redis.io/role-master: "1"
